# excelmcpserver

./: .gitignore.public  CHECKLIST_TEST.md  CLAUDE_CODE_HTTP_SETUP.md  DEVELOPMENT.md  FIXES_SUMMARY.md  FIX_REPORT.md  HTTP_SSE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_REPORT.md  PUSH_TO_GITHUB.md  QUICK_START_HTTP.md  QUICK_TEST_PROMPTS.md  README.md  RESTART_GUIDE.md  SETUP_INSTRUCTIONS.md  START_HERE.md  STATUS_v0.3.0.md  TEST_RESULTS_SESSION3.md  TOUT_EST_PRET.md  VALIDATION_EXAMPLES.md  VALIDATION_REPORT.md  claude_desktop_config.json  create_test_file.py  pyproject.toml  pytest.ini  run_tests.py  start_vba_mcp.bat  test.xlsm  test_access_tools.py  test_server_standalone.bat
